# RealMarketAPI.Python.Sdk

./: README.md  pyproject.toml
.github/workflows/: publish-pypi-beta.yml
realmarketapi_sdk/: __init__.py  client.py  websocket.py
