[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realmarketapi-python-sdk-beta"
version = "0.1.0b2"
description = "RealMarketAPI Python SDK beta"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0"
]

[tool.setuptools]
packages = ["realmarketapi_sdk"]
